# LLM-Customer-Support

./: README.md  test.ipynb
SupportAI/: README.md  app.py  pyproject.toml  test.ipynb
SupportAI/configs/: train.yaml
SupportAI/data/: synthetic_train.jsonl  synthetic_val.jsonl  synthetic_val_pairs.jsonl
SupportAI/outputs/lora-adapter/: adapter_config.json
SupportAI/outputs/lora-adapter/checkpoint-20/: rng_state.pth  trainer_state.json
SupportAI/src/assistant/: __init__.py  eval_json.py  formatting.py  infer.py  synth.py  train_lora.py
SupportAI/src/assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
