[project]
name = "assistant"
version = "0.1.0"
description = "Fine-tune a small open LLM (LoRA/QLoRA) to structure customer support text into JSON"
authors = [{ name = "Costantinos Constantinou" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
"transformers>=4.42",
"datasets>=2.19",
"accelerate>=0.31",
"peft>=0.11",
"bitsandbytes>=0.43; platform_system == 'Linux'",
"evaluate>=0.4",
"scikit-learn>=1.3",
"pydantic>=2.6",
"tyro>=0.8",
"pyyaml>=6.0",
"dash>=2.17",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4", "mypy>=1.7"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
